--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -20,4 +20,4 @@ jobs:
             -Dsonar.projectKey=kennethguru45_Joyiscoming
             -Dsonar.verbose=true
           
-          projectBaseDir: 
+          projectBaseDir: .
